--- a/front/package.json
+++ b/front/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "connected-react-router": "^4.4.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "history": "^4.7.2",
     "lodash": "^4.17.10",
     "node-fetch": "^2.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
