--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -11,10 +11,21 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
+    compile 'org.slf4j:slf4j-api:1.7.7'
+
+    // JUnit and Mockito
+    testCompile "junit:junit:4.11"
+    testCompile "org.mockito:mockito-core:1.+"
+
+    // Selenium
+    testCompile "io.github.bonigarcia:webdrivermanager:3.0.0"
+    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.+'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
