--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     // Selenium
     testCompile "io.github.bonigarcia:webdrivermanager:3.0.0"
+    testCompile group: 'com.codeborne', name: 'phantomjsdriver', version: '1.2.1'
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.+'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
